--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,63 +1,54 @@
 spring.application.name=USER-SERVICE
 
-server.port = 1212
+server.port=1212
 server.address=0.0.0.0
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service
-spring.datasource.username=root
-spring.datasource.password=Jaihind1720
+# Database
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-
-#create , update , create-drop, validate
 spring.jpa.hibernate.ddl-auto=update
-jwt.secret=dhurrah-secret-key-that-is-at-least-64-characters-long-dhurrah123456789
 
-# Swagger Configuration
+# JWT
+jwt.secret=${JWT_SECRET}
+
+# Swagger
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.swagger-ui.enabled=true
 springdoc.show-actuator=true
 
-# Security (temporarily for testing)
+# Security (temporary)
 spring.security.filter.dispatcher-types=REQUEST,ERROR,ASYNC
 
-
-#Eureka configurations
+# Eureka
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
-#file-upload configurations
+# File upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Redis Host and Port (default values)
-spring.redis.host=localhost
-spring.redis.port=6379
-
-# Optional (but good to have)
-spring.redis.timeout=60000
+# Redis
+spring.redis.host=${SPRING_REDIS_HOST}
+spring.redis.port=${SPRING_REDIS_PORT}
+spring.redis.timeout=${SPRING_REDIS_TIMEOUT}
 spring.cache.type=redis
 
-# java Mail Sender
-# Gmail SMTP Configuration
+# JavaMailSender
 spring.mail.protocol=smtp
 spring.mail.test-connection=true
 spring.mail.properties.mail.debug=true
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=team.pcub@gmail.com
-spring.mail.password=zfvq pbuk gxeh akwp
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-
-
-
-
