--- a/DriverService/DriverService/src/main/resources/application.properties
+++ b/DriverService/DriverService/src/main/resources/application.properties
@@ -1,19 +1,18 @@
 spring.application.name=DRIVER-SERVICE
 
-server.port = 1213
+server.port=1213
 server.address=0.0.0.0
 
-spring.datasource.url=jdbc:mysql://localhost:3306/driver_service
-spring.datasource.username=root
-spring.datasource.password=Jaihind1720
+spring.datasource.url=${MYSQL_DRIVER_DB_URL}
+spring.datasource.username=${MYSQL_DRIVER_USERNAME}
+spring.datasource.password=${MYSQL_DRIVER_PASSWORD}
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-
-#create , update , create-drop, validate
 spring.jpa.hibernate.ddl-auto=update
-jwt.secret=dhurrah-secret-key-that-is-at-least-64-characters-long-dhurrah123456789
+
+jwt.secret=${JWT_SECRET_DRIVER}
 
 # Swagger Configuration
 springdoc.api-docs.path=/v3/api-docs
@@ -21,28 +20,21 @@ springdoc.swagger-ui.path=/swagger-ui
 springdoc.swagger-ui.enabled=true
 springdoc.show-actuator=true
 
-# Security (temporarily for testing)
 spring.security.filter.dispatcher-types=REQUEST,ERROR,ASYNC
 
-
-#Eureka configurations
+# Eureka configurations
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
 
-#file-upload configurations
+# File upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-# Redis Host and Port (default values)
-spring.redis.host=localhost
-spring.redis.port=6379
-
-# Optional (but good to have)
-spring.redis.timeout=60000
+# Redis
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
+spring.redis.timeout=${REDIS_TIMEOUT}
 spring.cache.type=redis
-
-
-
