--- a/UserService/src/main/resources/application-test.properties
+++ b/UserService/src/main/resources/application-test.properties
@@ -1,26 +1,26 @@
-# ------------ Server ------------
-server.port=1212
-
-# ------------ Database ------------
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# ------------ JPA ------------
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# ------------ JWT ------------
-jwt.secret=${JWT_SECRET}
-
-# ------------ Cloudinary ------------
-cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
-cloudinary.api_key=${CLOUDINARY_API_KEY}
-cloudinary.api_secret=${CLOUDINARY_API_SECRET}
-
-# ------------ Email ------------
-spring.mail.host=${MAIL_HOST}
-spring.mail.port=${MAIL_PORT}
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+## ------------ Server ------------
+#server.port=1212
+#
+## ------------ Database ------------
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+## ------------ JPA ------------
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#
+## ------------ JWT ------------
+#jwt.secret=${JWT_SECRET}
+#
+## ------------ Cloudinary ------------
+#cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+#cloudinary.api_key=${CLOUDINARY_API_KEY}
+#cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+#
+## ------------ Email ------------
+#spring.mail.host=${MAIL_HOST}
+#spring.mail.port=${MAIL_PORT}
+#spring.mail.username=${MAIL_USERNAME}
+#spring.mail.password=${MAIL_PASSWORD}
