--- a/location-service/src/main/resources/application.properties
+++ b/location-service/src/main/resources/application.properties
@@ -10,3 +10,4 @@ eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=${EUREKA_SERVER_ADDRESS}
+google.maps.api.key=${GOOGLE_API_KEY}
