--- a/Ride-Service/pom.xml
+++ b/Ride-Service/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version>
+		</dependency>
 
 		<!-- Jackson Databind -->
 		<dependency>
