--- a/Eureka/Eureka/DockerFile
+++ b/Eureka/Eureka/DockerFile
@@ -1,11 +1,11 @@
-# Dockerfile
 FROM eclipse-temurin:21-jdk
 
 WORKDIR /app
 
 COPY . .
 
-RUN ./mvnw clean install -DskipTests
+RUN chmod +x mvnw \
+  && ./mvnw clean install -DskipTests
 
 EXPOSE 8080
 
