--- a/APIGateWay/src/main/resources/application.yaml
+++ b/APIGateWay/src/main/resources/application.yaml
@@ -52,4 +52,8 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+      defaultZone: ${EUREKA_URL}
+
+jwt:
+  secret:
+    key: ${JWT_SECRET_KEY}
