--- a/APIGateWay/DockerFile
+++ b/APIGateWay/DockerFile
@@ -9,4 +9,5 @@ RUN chmod +x mvnw \
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "target/api-gateway-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "target/APIGateWay-0.0.1-SNAPSHOT.jar"]
+
