--- a/DriverService/DriverService/src/main/resources/application.properties
+++ b/DriverService/DriverService/src/main/resources/application.properties
@@ -36,5 +36,8 @@ spring.servlet.multipart.max-request-size=10MB
 # Redis
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
+spring.redis.username=${REDIS_USERNAME}
+spring.redis.password=${REDIS_PASSWORD}
 spring.redis.timeout=${REDIS_TIMEOUT}
+spring.redis.ssl=${REDIS_SSL}
 spring.cache.type=redis
