--- a/DriverService/DriverService/src/main/resources/application.properties
+++ b/DriverService/DriverService/src/main/resources/application.properties
@@ -34,10 +34,11 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # Redis
-spring.redis.host=${REDIS_HOST}
-spring.redis.port=${REDIS_PORT}
-spring.redis.username=${REDIS_USERNAME}
-spring.redis.password=${REDIS_PASSWORD}
-spring.redis.timeout=${REDIS_TIMEOUT}
-spring.redis.ssl=${REDIS_SSL}
+spring.redis.host=${SPRING_DATA_REDIS_HOST}
+spring.redis.port=${SPRING_DATA_REDIS_PORT}
+spring.redis.username=${SPRING_DATA_REDIS_USERNAME}
+spring.redis.password=${SPRING_DATA_REDIS_PASSWORD}
+spring.redis.timeout=${SPRING_DATA_REDIS_TIMEOUT}
+spring.redis.ssl=${SPRING_DATA_REDIS_SSL}
+spring.redis.url=${SPRING_DATA_REDIS_URL}
 spring.cache.type=redis
