health check added

--- a/DriverService/DriverService/src/main/resources/application.properties
+++ b/DriverService/DriverService/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.servlet.multipart.max-request-size=10MB
 spring.redis.timeout=${SPRING_DATA_REDIS_TIMEOUT}
 spring.redis.url=${SPRING_DATA_REDIS_URL}
 spring.cache.type=redis
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
