--- a/DriverService/DriverService/pom.xml
+++ b/DriverService/DriverService/pom.xml
@@ -39,6 +39,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- Redis Core Dependency -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
