--- a/APIGateWay/src/main/resources/application.yaml
+++ b/APIGateWay/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: api-gateway
+    name: API_GATEWAY
   cloud:
     gateway:
       routes:
@@ -53,6 +53,14 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: ${EUREKA_URL}
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
 
 jwt:
   secret:
