--- a/Eureka/Eureka/render.yaml
+++ b/Eureka/Eureka/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: eureka-service
+    name: api-gateway
     env: linux
+    plan: free
+    rootDir: APIGateWay
     buildCommand: |
       curl -s "https://download.oracle.com/java/21/latest/jdk-21_linux-x64_bin.tar.gz" | tar xz
       ./jdk-21*/bin/java -version
       ./jdk-21*/bin/java -Dmaven.multiModuleProjectDirectory=$PWD -jar .mvn/wrapper/maven-wrapper.jar clean install
-    startCommand: ./jdk-21*/bin/java -jar target/Eureka-0.0.1-SNAPSHOT.jar
+    startCommand: ./jdk-21*/bin/java -jar target/APIGateWay-0.0.1-SNAPSHOT.jar
