--- a/Eureka/Eureka/src/main/resources/application.properties
+++ b/Eureka/Eureka/src/main/resources/application.properties
@@ -4,3 +4,6 @@ eureka.instance.hostname=localhost
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
