--- a/Ride-Service/pom.xml
+++ b/Ride-Service/pom.xml
@@ -109,8 +109,12 @@
 			<version>0.7.2</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
