--- a/DriverService/DriverService/src/main/resources/application.properties
+++ b/DriverService/DriverService/src/main/resources/application.properties
@@ -40,3 +40,22 @@ spring.cache.type=redis
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
+#circuit breaker
+
+resilience4j.circuitbreaker.instances.redisLocationCB.base-config=default
+resilience4j.circuitbreaker.configs.default.slidingWindowSize=10
+resilience4j.circuitbreaker.configs.default.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.configs.default.failureRateThreshold=50
+resilience4j.circuitbreaker.configs.default.waitDurationInOpenState=30s
+resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.configs.default.permittedNumberOfCallsInHalfOpenState=2
+resilience4j.circuitbreaker.configs.default.recordExceptions[0]=org.springframework.dao.DataAccessException
+resilience4j.circuitbreaker.configs.default.recordExceptions[1]=java.util.concurrent.TimeoutException
+resilience4j.circuitbreaker.configs.default.recordExceptions[2]=com.driverService.exception.ServiceUnavailableException
+
+
+
+#webSocket debug
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.springframework.web.socket=DEBUG
+
