--- a/Ride-Service/src/main/resources/application.yaml
+++ b/Ride-Service/src/main/resources/application.yaml
@@ -20,15 +20,16 @@ spring:
         format_sql: true
 
   redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-    timeout: ${REDIS_TIMEOUT}
-
+    url: ${SPRING_DATA_REDIS_URL}
+    timeout: ${SPRING_DATA_REDIS_TIMEOUT}
   cache:
     type: redis
 
+
+
+
 weather:
- key: ${WEATHER_APIKEY}
+  key: ${WEATHER_APIKEY}
 
 eureka:
   client:
@@ -37,8 +38,13 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
 
+  instance:
+    prefer-ip-address: true
+    hostname: localhost   # ✅ This avoids .mshome.net issues
+
 api-gateway:
   url: ${API_GATEWAY_URL}
+
 ors:
   api:
     key: ${ORS_API_KEY}
